<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView2"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
<HorizontalScrollView android:layout_width="fill_parent"
    android:layout_height="wrap_content" >
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/categoryhead"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/categorysp"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brandhead"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/brandsp"
                android:layout_width="329dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="125dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scategoryhead"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/subcatsp"
                android:layout_width="331dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            

            
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/searchbtn"
                android:layout_width="173dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="200dp"
                android:layout_marginTop="50dp"
                android:text="@string/gobtn" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="788dp"
            android:layout_height="248dp"
            android:layout_marginTop="50dp"
            android:layout_weight="0.70" >

            <ImageButton
                android:id="@+id/imageButton1"
                android:layout_width="300dp"
                android:layout_height="181dp"
                android:src="@drawable/ic_launcher"
                android:scaleType="fitXY" />

            <Button
                android:id="@+id/viewbtn"
                android:layout_width="205dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="80dp"
                android:text="@string/viewonline" />
        </LinearLayout>
    </LinearLayout>

        </HorizontalScrollView>
       

    </LinearLayout>

</ScrollView>
